# simple-spotify-tui

./: .gitignore  README.md  app.py  main.py  pyproject.toml  spotify.py
